<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/header"
        android:src="@drawable/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:gravity="center"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="30dp">
    <Button
        android:id="@+id/btn_play"
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/play_btn"
        android:fontFamily="@font/xilosa"
        android:layout_marginTop="6dp"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        />
    <Button
        android:id="@+id/btn_configuration"
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/configuration_btn"
        android:fontFamily="@font/xilosa"
        android:textSize="26sp"
        android:layout_marginTop="6dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        />
    <Button
        android:id="@+id/btn_about"
        android:layout_weight="1"
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/about_btn"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/xilosa"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        />
    </LinearLayout>

</RelativeLayout>