<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ModeSelectionActivity"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/header"
        android:src="@drawable/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:gravity="center"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="30dp">
        <Button
            android:id="@+id/btn_single_player"
            android:scaleType="centerInside"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/single_player_btn"
            android:fontFamily="@font/xilosa"
            android:textSize="26sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            />
        <Button
            android:id="@+id/btn_challenge_mode"
            android:scaleType="centerInside"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/challenge_mode_btn"
            android:fontFamily="@font/xilosa"
            android:textSize="26sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            />
        <Button
            android:id="@+id/btn_duo"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/duo_btn"
            android:fontFamily="@font/xilosa"
            android:textSize="26sp"
            android:layout_marginTop="6dp"
            android:enabled="false"
            android:textColor="@color/grey"
            android:background="@color/colorPrimaryDisabled"
            />
    </LinearLayout>

</RelativeLayout>